@@ -1,3 +1,8 @@
+2011-11-22  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* testsuite/run-dlvhex-tests.sh: Ignore testcases in
+	.tests file that is commented out using #.
+
 2011-09-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* README: Add missing bootstrap.sh.
